<resources>
    <string name="app_name">Voyage +</string>
    <string name="title_activity_login">LOGIN</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">CONNEXION</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">User name invalid</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Connexion impossible"</string>
    <string name="name">Nom</string>
    <string name="search_label">Search</string>
    <string name="search_hint">Touver quelques choses</string>
    <string name="menu">Menu</string>
    <string name="param_tres">Paramètres</string>
    <string name="langues">Langues</string>
    <string name="creer_un_compte">CREATE ACCOUNT</string>
    <string name="subscribe_the_channel">subscribe_the_channel</string>
    <string name="full_name">full name</string>
    <string name="Full_name">Full_name</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone number</string>
    <string name="password">Password</string>
    <string name="update">Update</string>
    <string name="favorites">Favories</string>
    <string name="post_price">This is post price</string>
    <string name="post_name">This is post name</string>
    <string name="description">This is the descriptions</string>
    <string name="setting">Settings</string>
    <string name="restaut">Restos</string>
    <string name="places">Places</string>
    <string name="hotel">Hotels</string>
    <string name="home">Home</string>
    <string name="seacher">Rechercher quelque chose</string>
    <string name="lieu">Lieux</string>
    <string name="acceuil">Home</string>
    <string name="content_description_media">Restaurant</string>
    <string name="title">Populaire</string>
    <string name="secondary_text">Voyagez partout dans le monde</string>
    <string name="supporting_text">Un bon moment</string>
    <string name="action_1">Comment</string>
    <string name="action_2">I Like</string>
    <string name="page_title">Home</string>
    <string name="send_email">Send</string>
    <string name="mot_de_passe">Password</string>
    <string name="mot_de_passe_oublie">Password Forget</string>
    <string name="connexion">Connect</string>
    <string name="login_string">LOGIN</string>
    <string name="title_activity_parametres">ParametresActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="title_activity_parametre">ParametreActivity</string>
    <string name="username">User Name</string>
</resources>