<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:id="@+id/post_item_layout"
    android:padding="10dp">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints">
        <ImageView
            android:id="@+id/post_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:scaleType="centerInside"
            android:src="@drawable/etoile_rouge"/>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <TextView
                android:id="@+id/post_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/post_name"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
        </androidx.appcompat.widget.LinearLayoutCompat>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/post_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:accessibilityTraversalBefore="@id/post_image"
                android:text="@string/description"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                tools:ignore="MissingConstraints" />
            <TextView
                android:id="@+id/post_price"
                app:layout_constraintTop_toBottomOf="@+id/post_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/post_price"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                tools:layout_editor_absoluteX="-20dp"
                tools:layout_editor_absoluteY="255dp"
                tools:ignore="MissingConstraints" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>



</androidx.constraintlayout.widget.ConstraintLayout>