<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.6"
        android:scaleType="centerCrop"
        android:src="@drawable/image7"/>

    <ImageView
        android:id="@+id/btnback"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="?actionBarSize"
        android:layout_marginLeft="20dp"
        android:src="@drawable/quantum_ic_arrow_back_grey600_24"
        app:tint="@color/white"/>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="3">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.8"
            android:gravity="bottom|center"
            android:orientation="vertical">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/imgPick"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_marginTop="5dp"
                android:src="@drawable/image_selecte"/>


        </LinearLayout>
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2.2"
            android:orientation="vertical">

<!--            <com.google.android.material.textfield.TextInputEditText-->
<!--                android:id="@+id/edtUsername"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_marginHorizontal="30dp"-->
<!--                android:layout_marginTop="30dp"-->
<!--                android:backgroundTint="@color/white"-->
<!--                android:drawableStart="@drawable/ic_baseline_person_24"-->
<!--                android:drawablePadding="10dp"-->
<!--                android:drawableTint="@color/white"-->
<!--                android:hint="Username"-->
<!--                android:inputType="text"-->
<!--                android:maxLines="1"-->
<!--                android:textColor="@color/white"/>-->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/edtUsername"
                    android:layout_marginHorizontal="30dp"
                    android:layout_marginTop="10dp"
                    android:backgroundTint="@color/white"
                    android:drawableStart="@drawable/email_icon"
                    android:drawablePadding="10dp"
                    android:drawableTint="@color/white"
                    android:hint="@string/username"
                    android:inputType="text"
                    android:maxLines="1"
                    android:textColor="@color/white"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/edtEmail"
                    android:layout_marginHorizontal="30dp"
                    android:layout_marginTop="10dp"
                    android:backgroundTint="@color/white"
                    android:drawableStart="@drawable/ic_baseline_person"
                    android:drawablePadding="10dp"
                    android:drawableTint="@color/white"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:textColor="@color/white"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/edtPassword"
                    android:layout_marginHorizontal="30dp"
                    android:layout_marginTop="10dp"
                    android:backgroundTint="@color/white"
                    android:drawableStart="@drawable/password_icon"
                    android:drawablePadding="10dp"
                    android:drawableTint="@color/white"
                    android:hint="@string/email"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:textColor="@color/white"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnSignUp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:layout_marginTop="10dp"
                android:padding="15dp"
                android:text="@string/creer_un_compte"
                android:textStyle="bold"
                android:backgroundTint="@color/colorAccent"
                app:cornerRadius="20dp"
                app:elevation="10dp"/>

            <TextView
                android:id="@+id/txtLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:text="@string/login_string"
                android:textColor="@color/white"
                android:textSize="20dp"/>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/app_name"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:layout_marginTop="100dp"
                android:layout_marginBottom="60dp"
                android:src="@drawable/logo"
                android:gravity="center"/>
        </LinearLayout>

    </LinearLayout>


</RelativeLayout>